[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Background/Tile_Wall_RightCorner.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/Ramp1x3.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/Tile_Blank.png" type="Texture" id=3]
[ext_resource path="res://assets/Background/Tile_Wall_Right.png" type="Texture" id=4]
[ext_resource path="res://assets/Background/DrawingButton_Ramp.png" type="Texture" id=5]
[ext_resource path="res://assets/Background/Tile_Wall_Left.png" type="Texture" id=6]
[ext_resource path="res://assets/Background/Ramp1x2.png" type="Texture" id=7]
[ext_resource path="res://assets/Background/Tile_Spikes.png" type="Texture" id=8]
[ext_resource path="res://assets/Background/Tile_Ground.png" type="Texture" id=9]
[ext_resource path="res://assets/Background/Tile_Wall_LeftCorner.png" type="Texture" id=10]
[ext_resource path="res://Map.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 500, 1500 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 320, 640, 0, 640, 320 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 960, 0, 960, 0, 960, 320, 0, 320 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 320, 0, 320, 0, 320, 320, 0, 320, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 320, 320, 0, 320, 0, 192, 320, 192 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="TileSet" id=12]
0/name = "Tile_Ground.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 320 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tile_Wall_Left.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 320, 320 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tile_Wall_LeftCorner.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 320, 320 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tile_Wall_Right.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 320, 320 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tile_Wall_RightCorner.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 320, 320 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Ramp1x2.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 640, 320 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Ramp1x3.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 960, 320 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 8 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "DrawingButton_Ramp.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 320, 320 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 9 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tile_Spikes.png 8"
8/texture = ExtResource( 8 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, -192, 320, 320 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 10 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Tile_Blank.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 320, 320 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 11 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 500, 60 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 330, 60 )

[node name="Map" type="Node2D"]
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 16398.6, 1432.28 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 4 )
tile_set = SubResource( 12 )
cell_size = Vector2( 324, 324 )
cell_custom_transform = Transform2D( 324, 0, 0, 324, 0, 0 )
format = 1
tile_data = PoolIntArray( 65527, 9, 0, 65528, 9, 0, 65529, 9, 0, 65530, 9, 0, 65531, 9, 0, 65532, 9, 0, 65533, 9, 0, 65534, 9, 0, 65535, 3, 0, 52, 1, 0, 53, 9, 0, 54, 9, 0, 55, 9, 0, 56, 9, 0, 57, 9, 0, 58, 9, 0, 59, 9, 0, 60, 9, 0, 131063, 9, 0, 131064, 9, 0, 131065, 9, 0, 131066, 9, 0, 131067, 9, 0, 131068, 9, 0, 131069, 9, 0, 131070, 9, 0, 131071, 3, 0, 65588, 1, 0, 65589, 9, 0, 65590, 9, 0, 65591, 9, 0, 65592, 9, 0, 65593, 9, 0, 65594, 9, 0, 65595, 9, 0, 65596, 9, 0, 196599, 9, 0, 196600, 9, 0, 196601, 9, 0, 196602, 9, 0, 196603, 9, 0, 196604, 9, 0, 196605, 9, 0, 196606, 9, 0, 196607, 3, 0, 131124, 1, 0, 131125, 9, 0, 131126, 9, 0, 131127, 9, 0, 131128, 9, 0, 131129, 9, 0, 131130, 9, 0, 131131, 9, 0, 131132, 9, 0, 262135, 9, 0, 262136, 9, 0, 262137, 9, 0, 262138, 9, 0, 262139, 9, 0, 262140, 9, 0, 262141, 9, 0, 262142, 9, 0, 262143, 3, 0, 196660, 1, 0, 196661, 9, 0, 196662, 9, 0, 196663, 9, 0, 196664, 9, 0, 196665, 9, 0, 196666, 9, 0, 196667, 9, 0, 196668, 9, 0, 327671, 9, 0, 327672, 9, 0, 327673, 9, 0, 327674, 9, 0, 327675, 9, 0, 327676, 9, 0, 327677, 9, 0, 327678, 9, 0, 327679, 3, 0, 262196, 1, 0, 262197, 9, 0, 262198, 9, 0, 262199, 9, 0, 262200, 9, 0, 262201, 9, 0, 262202, 9, 0, 262203, 9, 0, 262204, 9, 0, 393207, 9, 0, 393208, 9, 0, 393209, 9, 0, 393210, 9, 0, 393211, 9, 0, 393212, 9, 0, 393213, 9, 0, 393214, 9, 0, 393215, 3, 0, 327732, 1, 0, 327733, 9, 0, 327734, 9, 0, 327735, 9, 0, 327736, 9, 0, 327737, 9, 0, 327738, 9, 0, 327739, 9, 0, 327740, 9, 0, 458743, 9, 0, 458744, 9, 0, 458745, 9, 0, 458746, 9, 0, 458747, 9, 0, 458748, 9, 0, 458749, 9, 0, 458750, 9, 0, 458751, 3, 0, 393268, 1, 0, 393269, 9, 0, 393270, 9, 0, 393271, 9, 0, 393272, 9, 0, 393273, 9, 0, 393274, 9, 0, 393275, 9, 0, 393276, 9, 0, 524279, 9, 0, 524280, 9, 0, 524281, 9, 0, 524282, 9, 0, 524283, 9, 0, 524284, 9, 0, 524285, 9, 0, 524286, 9, 0, 524287, 3, 0, 458804, 1, 0, 458805, 9, 0, 458806, 9, 0, 458807, 9, 0, 458808, 9, 0, 458809, 9, 0, 458810, 9, 0, 458811, 9, 0, 458812, 9, 0, 589815, 9, 0, 589816, 9, 0, 589817, 9, 0, 589818, 9, 0, 589819, 9, 0, 589820, 9, 0, 589821, 9, 0, 589822, 9, 0, 589823, 3, 0, 524340, 1, 0, 524341, 9, 0, 524342, 9, 0, 524343, 9, 0, 524344, 9, 0, 524345, 9, 0, 524346, 9, 0, 524347, 9, 0, 524348, 9, 0, 655351, 9, 0, 655352, 9, 0, 655353, 9, 0, 655354, 9, 0, 655355, 9, 0, 655356, 9, 0, 655357, 9, 0, 655358, 9, 0, 655359, 3, 0, 589873, 2, 0, 589874, 0, 0, 589875, 0, 0, 589876, 9, 0, 589877, 9, 0, 589878, 9, 0, 589879, 9, 0, 589880, 9, 0, 589881, 9, 0, 589882, 9, 0, 589883, 9, 0, 589884, 9, 0, 720887, 9, 0, 720888, 9, 0, 720889, 9, 0, 720890, 9, 0, 720891, 9, 0, 720892, 9, 0, 720893, 9, 0, 720894, 9, 0, 720895, 3, 0, 655398, 6, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 655406, 8, 0, 655407, 8, 0, 655408, 8, 0, 655409, 1, 0, 655410, 9, 0, 655411, 9, 0, 655412, 9, 0, 655413, 9, 0, 655414, 9, 0, 655415, 9, 0, 655416, 9, 0, 655417, 9, 0, 655418, 9, 0, 655419, 9, 0, 655420, 9, 0, 786423, 9, 0, 786424, 9, 0, 786425, 9, 0, 786426, 9, 0, 786427, 9, 0, 786428, 9, 0, 786429, 9, 0, 786430, 9, 0, 786431, 3, 0, 720924, 6, 0, 720927, 0, 0, 720928, 0, 0, 720929, 536870914, 0, 720930, 8, 0, 720931, 8, 0, 720932, 2, 0, 720933, 0, 0, 720934, 9, 0, 720935, 9, 0, 720936, 9, 0, 720937, 9, 0, 720938, 9, 0, 720939, 9, 0, 720940, 9, 0, 720941, 9, 0, 720942, 9, 0, 720943, 9, 0, 720944, 9, 0, 720945, 9, 0, 720946, 9, 0, 720947, 9, 0, 720948, 9, 0, 720949, 9, 0, 720950, 9, 0, 720951, 9, 0, 720952, 9, 0, 720953, 9, 0, 720954, 9, 0, 720955, 9, 0, 720956, 9, 0, 851959, 9, 0, 851960, 9, 0, 851961, 9, 0, 851962, 9, 0, 851963, 9, 0, 851964, 9, 0, 851965, 9, 0, 851966, 9, 0, 851967, 3, 0, 786457, 6, 0, 786460, 9, 0, 786461, 9, 0, 786462, 9, 0, 786463, 9, 0, 786464, 9, 0, 786465, 9, 0, 786466, 0, 0, 786467, 0, 0, 786468, 9, 0, 786469, 9, 0, 786470, 9, 0, 786471, 9, 0, 786472, 9, 0, 786473, 9, 0, 786474, 9, 0, 786475, 9, 0, 786476, 9, 0, 786477, 9, 0, 786478, 9, 0, 786479, 9, 0, 786480, 9, 0, 786481, 9, 0, 786482, 9, 0, 786483, 9, 0, 786484, 9, 0, 786485, 9, 0, 786486, 9, 0, 786487, 9, 0, 786488, 9, 0, 786489, 9, 0, 786490, 9, 0, 786491, 9, 0, 786492, 9, 0, 917495, 9, 0, 917496, 9, 0, 917497, 9, 0, 917498, 9, 0, 917499, 9, 0, 917500, 9, 0, 917501, 9, 0, 917502, 9, 0, 917503, 3, 0, 851985, 2, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 9, 0, 851996, 9, 0, 851997, 9, 0, 851998, 9, 0, 851999, 9, 0, 852000, 9, 0, 852001, 9, 0, 852002, 9, 0, 852003, 9, 0, 852004, 9, 0, 852005, 9, 0, 852006, 9, 0, 852007, 9, 0, 852008, 9, 0, 852009, 9, 0, 852010, 9, 0, 852011, 9, 0, 852012, 9, 0, 852013, 9, 0, 852014, 9, 0, 852015, 9, 0, 852016, 9, 0, 852017, 9, 0, 852018, 9, 0, 852019, 9, 0, 852020, 9, 0, 852021, 9, 0, 852022, 9, 0, 852023, 9, 0, 852024, 9, 0, 852025, 9, 0, 852026, 9, 0, 852027, 9, 0, 852028, 9, 0, 983031, 9, 0, 983032, 9, 0, 983033, 9, 0, 983034, 9, 0, 983035, 9, 0, 983036, 9, 0, 983037, 9, 0, 983038, 9, 0, 983039, 3, 0, 917521, 1, 0, 917522, 9, 0, 917523, 9, 0, 917524, 9, 0, 917525, 9, 0, 917526, 9, 0, 917527, 9, 0, 917528, 9, 0, 917529, 9, 0, 917530, 9, 0, 917531, 9, 0, 917532, 9, 0, 917533, 9, 0, 917534, 9, 0, 917535, 9, 0, 917536, 9, 0, 917537, 9, 0, 917538, 9, 0, 917539, 9, 0, 917540, 9, 0, 917541, 9, 0, 917542, 9, 0, 917543, 9, 0, 917544, 9, 0, 917545, 9, 0, 917546, 9, 0, 917547, 9, 0, 917548, 9, 0, 917549, 9, 0, 917550, 9, 0, 917551, 9, 0, 917552, 9, 0, 917553, 9, 0, 917554, 9, 0, 917555, 9, 0, 917556, 9, 0, 917557, 9, 0, 917558, 9, 0, 917559, 9, 0, 917560, 9, 0, 917561, 9, 0, 917562, 9, 0, 917563, 9, 0, 917564, 9, 0, 1048567, 9, 0, 1048568, 9, 0, 1048569, 9, 0, 1048570, 9, 0, 1048571, 9, 0, 1048572, 9, 0, 1048573, 9, 0, 1048574, 9, 0, 1048575, 3, 0, 983050, 2, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 9, 0, 983058, 9, 0, 983059, 9, 0, 983060, 9, 0, 983061, 9, 0, 983062, 9, 0, 983063, 9, 0, 983064, 9, 0, 983065, 9, 0, 983066, 9, 0, 983067, 9, 0, 983068, 9, 0, 983069, 9, 0, 983070, 9, 0, 983071, 9, 0, 983072, 9, 0, 983073, 9, 0, 983074, 9, 0, 983075, 9, 0, 983076, 9, 0, 983077, 9, 0, 983078, 9, 0, 983079, 9, 0, 983080, 9, 0, 983081, 9, 0, 983082, 9, 0, 983083, 9, 0, 983084, 9, 0, 983085, 9, 0, 983086, 9, 0, 983087, 9, 0, 983088, 9, 0, 983089, 9, 0, 983090, 9, 0, 983091, 9, 0, 983092, 9, 0, 983093, 9, 0, 983094, 9, 0, 983095, 9, 0, 983096, 9, 0, 983097, 9, 0, 983098, 9, 0, 983099, 9, 0, 983100, 9, 0, 1114103, 9, 0, 1114104, 9, 0, 1114105, 9, 0, 1114106, 9, 0, 1114107, 9, 0, 1114108, 9, 0, 1114109, 9, 0, 1114110, 9, 0, 1114111, 9, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 9, 0, 1048587, 9, 0, 1048588, 9, 0, 1048589, 9, 0, 1048590, 9, 0, 1048591, 9, 0, 1048592, 9, 0, 1048593, 9, 0, 1048594, 9, 0, 1048595, 9, 0, 1048596, 9, 0, 1048597, 9, 0, 1048598, 9, 0, 1048599, 9, 0, 1048600, 9, 0, 1048601, 9, 0, 1048602, 9, 0, 1048603, 9, 0, 1048604, 9, 0, 1048605, 9, 0, 1048606, 9, 0, 1048607, 9, 0, 1048608, 9, 0, 1048609, 9, 0, 1048610, 9, 0, 1048611, 9, 0, 1048612, 9, 0, 1048613, 9, 0, 1048614, 9, 0, 1048615, 9, 0, 1048616, 9, 0, 1048617, 9, 0, 1048618, 9, 0, 1048619, 9, 0, 1048620, 9, 0, 1048621, 9, 0, 1048622, 9, 0, 1048623, 9, 0, 1048624, 9, 0, 1048625, 9, 0, 1048626, 9, 0, 1048627, 9, 0, 1048628, 9, 0, 1048629, 9, 0, 1048630, 9, 0, 1048631, 9, 0, 1048632, 9, 0, 1048633, 9, 0, 1048634, 9, 0, 1048635, 9, 0, 1048636, 9, 0, 1179639, 9, 0, 1179640, 9, 0, 1179641, 9, 0, 1179642, 9, 0, 1179643, 9, 0, 1179644, 9, 0, 1179645, 9, 0, 1179646, 9, 0, 1179647, 9, 0, 1114112, 9, 0, 1114113, 9, 0, 1114114, 9, 0, 1114115, 9, 0, 1114116, 9, 0, 1114117, 9, 0, 1114118, 9, 0, 1114119, 9, 0, 1114120, 9, 0, 1114121, 9, 0, 1114122, 9, 0, 1114123, 9, 0, 1114124, 9, 0, 1114125, 9, 0, 1114126, 9, 0, 1114127, 9, 0, 1114128, 9, 0, 1114129, 9, 0, 1114130, 9, 0, 1114131, 9, 0, 1114132, 9, 0, 1114133, 9, 0, 1114134, 9, 0, 1114135, 9, 0, 1114136, 9, 0, 1114137, 9, 0, 1114138, 9, 0, 1114139, 9, 0, 1114140, 9, 0, 1114141, 9, 0, 1114142, 9, 0, 1114143, 9, 0, 1114144, 9, 0, 1114145, 9, 0, 1114146, 9, 0, 1114147, 9, 0, 1114148, 9, 0, 1114149, 9, 0, 1114150, 9, 0, 1114151, 9, 0, 1114152, 9, 0, 1114153, 9, 0, 1114154, 9, 0, 1114155, 9, 0, 1114156, 9, 0, 1114157, 9, 0, 1114158, 9, 0, 1114159, 9, 0, 1114160, 9, 0, 1114161, 9, 0, 1114162, 9, 0, 1114163, 9, 0, 1114164, 9, 0, 1114165, 9, 0, 1114166, 9, 0, 1114167, 9, 0, 1114168, 9, 0, 1114169, 9, 0, 1114170, 9, 0, 1114171, 9, 0, 1114172, 9, 0, 1245175, 9, 0, 1245176, 9, 0, 1245177, 9, 0, 1245178, 9, 0, 1245179, 9, 0, 1245180, 9, 0, 1245181, 9, 0, 1245182, 9, 0, 1245183, 9, 0, 1179648, 9, 0, 1179649, 9, 0, 1179650, 9, 0, 1179651, 9, 0, 1179652, 9, 0, 1179653, 9, 0, 1179654, 9, 0, 1179655, 9, 0, 1179656, 9, 0, 1179657, 9, 0, 1179658, 9, 0, 1179659, 9, 0, 1179660, 9, 0, 1179661, 9, 0, 1179662, 9, 0, 1179663, 9, 0, 1179664, 9, 0, 1179665, 9, 0, 1179666, 9, 0, 1179667, 9, 0, 1179668, 9, 0, 1179669, 9, 0, 1179670, 9, 0, 1179671, 9, 0, 1179672, 9, 0, 1179673, 9, 0, 1179674, 9, 0, 1179675, 9, 0, 1179676, 9, 0, 1179677, 9, 0, 1179678, 9, 0, 1179679, 9, 0, 1179680, 9, 0, 1179681, 9, 0, 1179682, 9, 0, 1179683, 9, 0, 1179684, 9, 0, 1179685, 9, 0, 1179686, 9, 0, 1179687, 9, 0, 1179688, 9, 0, 1179689, 9, 0, 1179690, 9, 0, 1179691, 9, 0, 1179692, 9, 0, 1179693, 9, 0, 1179694, 9, 0, 1179695, 9, 0, 1179696, 9, 0, 1179697, 9, 0, 1179698, 9, 0, 1179699, 9, 0, 1179700, 9, 0, 1179701, 9, 0, 1179702, 9, 0, 1179703, 9, 0, 1179704, 9, 0, 1179705, 9, 0, 1179706, 9, 0, 1179707, 9, 0, 1179708, 9, 0, 1310711, 9, 0, 1310712, 9, 0, 1310713, 9, 0, 1310714, 9, 0, 1310715, 9, 0, 1310716, 9, 0, 1310717, 9, 0, 1310718, 9, 0, 1310719, 9, 0, 1245184, 9, 0, 1245185, 9, 0, 1245186, 9, 0, 1245187, 9, 0, 1245188, 9, 0, 1245189, 9, 0, 1245190, 9, 0, 1245191, 9, 0, 1245192, 9, 0, 1245193, 9, 0, 1245194, 9, 0, 1245195, 9, 0, 1245196, 9, 0, 1245197, 9, 0, 1245198, 9, 0, 1245199, 9, 0, 1245200, 9, 0, 1245201, 9, 0, 1245202, 9, 0, 1245203, 9, 0, 1245204, 9, 0, 1245205, 9, 0, 1245206, 9, 0, 1245207, 9, 0, 1245208, 9, 0, 1245209, 9, 0, 1245210, 9, 0, 1245211, 9, 0, 1245212, 9, 0, 1245213, 9, 0, 1245214, 9, 0, 1245215, 9, 0, 1245216, 9, 0, 1245217, 9, 0, 1245218, 9, 0, 1245219, 9, 0, 1245220, 9, 0, 1245221, 9, 0, 1245222, 9, 0, 1245223, 9, 0, 1245224, 9, 0, 1245225, 9, 0, 1245226, 9, 0, 1245227, 9, 0, 1245228, 9, 0, 1245229, 9, 0, 1245230, 9, 0, 1245231, 9, 0, 1245232, 9, 0, 1245233, 9, 0, 1245234, 9, 0, 1245235, 9, 0, 1245236, 9, 0, 1245237, 9, 0, 1245238, 9, 0, 1245239, 9, 0, 1245240, 9, 0, 1245241, 9, 0, 1245242, 9, 0, 1245243, 9, 0, 1245244, 9, 0, 1376247, 9, 0, 1376248, 9, 0, 1376249, 9, 0, 1376250, 9, 0, 1376251, 9, 0, 1376252, 9, 0, 1376253, 9, 0, 1376254, 9, 0, 1376255, 9, 0, 1310720, 9, 0, 1310721, 9, 0, 1310722, 9, 0, 1310723, 9, 0, 1310724, 9, 0, 1310725, 9, 0, 1310726, 9, 0, 1310727, 9, 0, 1310728, 9, 0, 1310729, 9, 0, 1310730, 9, 0, 1310731, 9, 0, 1310732, 9, 0, 1310733, 9, 0, 1310734, 9, 0, 1310735, 9, 0, 1310736, 9, 0, 1310737, 9, 0, 1310738, 9, 0, 1310739, 9, 0, 1310740, 9, 0, 1310741, 9, 0, 1310742, 9, 0, 1310743, 9, 0, 1310744, 9, 0, 1310745, 9, 0, 1310746, 9, 0, 1310747, 9, 0, 1310748, 9, 0, 1310749, 9, 0, 1310750, 9, 0, 1310751, 9, 0, 1310752, 9, 0, 1310753, 9, 0, 1310754, 9, 0, 1310755, 9, 0, 1310756, 9, 0, 1310757, 9, 0, 1310758, 9, 0, 1310759, 9, 0, 1310760, 9, 0, 1310761, 9, 0, 1310762, 9, 0, 1310763, 9, 0, 1310764, 9, 0, 1310765, 9, 0, 1310766, 9, 0, 1310767, 9, 0, 1310768, 9, 0, 1310769, 9, 0, 1310770, 9, 0, 1310771, 9, 0, 1310772, 9, 0, 1310773, 9, 0, 1310774, 9, 0, 1310775, 9, 0, 1310776, 9, 0, 1310777, 9, 0, 1310778, 9, 0, 1310779, 9, 0, 1310780, 9, 0, 1441783, 9, 0, 1441784, 9, 0, 1441785, 9, 0, 1441786, 9, 0, 1441787, 9, 0, 1441788, 9, 0, 1441789, 9, 0, 1441790, 9, 0, 1441791, 9, 0, 1376256, 9, 0, 1376257, 9, 0, 1376258, 9, 0, 1376259, 9, 0, 1376260, 9, 0, 1376261, 9, 0, 1376262, 9, 0, 1376263, 9, 0, 1376264, 9, 0, 1376265, 9, 0, 1376266, 9, 0, 1376267, 9, 0, 1376268, 9, 0, 1376269, 9, 0, 1376270, 9, 0, 1376271, 9, 0, 1376272, 9, 0, 1376273, 9, 0, 1376274, 9, 0, 1376275, 9, 0, 1376276, 9, 0, 1376277, 9, 0, 1376278, 9, 0, 1376279, 9, 0, 1376280, 9, 0, 1376281, 9, 0, 1376282, 9, 0, 1376283, 9, 0, 1376284, 9, 0, 1376285, 9, 0, 1376286, 9, 0, 1376287, 9, 0, 1376288, 9, 0, 1376289, 9, 0, 1376290, 9, 0, 1376291, 9, 0, 1376292, 9, 0, 1376293, 9, 0, 1376294, 9, 0, 1376295, 9, 0, 1376296, 9, 0, 1376297, 9, 0, 1376298, 9, 0, 1376299, 9, 0, 1376300, 9, 0, 1376301, 9, 0, 1376302, 9, 0, 1376303, 9, 0, 1376304, 9, 0, 1376305, 9, 0, 1376306, 9, 0, 1376307, 9, 0, 1376308, 9, 0, 1376309, 9, 0, 1376310, 9, 0, 1376311, 9, 0, 1376312, 9, 0, 1376313, 9, 0, 1376314, 9, 0, 1376315, 9, 0, 1376316, 9, 0, 1507319, 9, 0, 1507320, 9, 0, 1507321, 9, 0, 1507322, 9, 0, 1507323, 9, 0, 1507324, 9, 0, 1507325, 9, 0, 1507326, 9, 0, 1507327, 9, 0, 1441792, 9, 0, 1441793, 9, 0, 1441794, 9, 0, 1441795, 9, 0, 1441796, 9, 0, 1441797, 9, 0, 1441798, 9, 0, 1441799, 9, 0, 1441800, 9, 0, 1441801, 9, 0, 1441802, 9, 0, 1441803, 9, 0, 1441804, 9, 0, 1441805, 9, 0, 1441806, 9, 0, 1441807, 9, 0, 1441808, 9, 0, 1441809, 9, 0, 1441810, 9, 0, 1441811, 9, 0, 1441812, 9, 0, 1441813, 9, 0, 1441814, 9, 0, 1441815, 9, 0, 1441816, 9, 0, 1441817, 9, 0, 1441818, 9, 0, 1441819, 9, 0, 1441820, 9, 0, 1441821, 9, 0, 1441822, 9, 0, 1441823, 9, 0, 1441824, 9, 0, 1441825, 9, 0, 1441826, 9, 0, 1441827, 9, 0, 1441828, 9, 0, 1441829, 9, 0, 1441830, 9, 0, 1441831, 9, 0, 1441832, 9, 0, 1441833, 9, 0, 1441834, 9, 0, 1441835, 9, 0, 1441836, 9, 0, 1441837, 9, 0, 1441838, 9, 0, 1441839, 9, 0, 1441840, 9, 0, 1441841, 9, 0, 1441842, 9, 0, 1441843, 9, 0, 1441844, 9, 0, 1441845, 9, 0, 1441846, 9, 0, 1441847, 9, 0, 1441848, 9, 0, 1441849, 9, 0, 1441850, 9, 0, 1441851, 9, 0, 1441852, 9, 0 )

[node name="DamageZone1" type="Area2D" parent="."]
position = Vector2( 15401.7, 3486.57 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone1"]
shape = SubResource( 14 )

[node name="DamageZone2" type="Area2D" parent="."]
position = Vector2( 11339, 3809.84 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone2"]
shape = SubResource( 13 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="DamageZone1" to="." method="_on_DamageZone1_body_entered"]
[connection signal="body_entered" from="DamageZone2" to="." method="_on_DamageZone2_body_entered"]
